# soroban-auditor

./: .gitignore  .vimspector.json  Cargo.toml  LICENSE  PIPELINE_ARCHITECUTRE.MD  PROGRESS_COMPLETE.md  QUALITY_REPORT.md  QUICK_START.md  README.md  RECOMANDARI.md  REVERSE_ENGINEERING_PLAN.md  SDK_DETECTION.md  TODO.md  memory_macros.rs  output.rs  patterns.md  patterns.toml  readme.md  run-builds-contracts.sh  run-roundtrip-test.sh  run-test-matrix.sh  sdk_detection.md  soroban_token_contract.optimized.rs  wasm_build_locations.txt
playground/: IMPROVEMENT_PROGRESS.md
src/: code_builder.rs  decompile.rs  entry_decode_template.rs  expr_builder.rs  fingerprint.rs  fingerprint_registry.rs  fmt.rs  format.rs  forwarder.rs  helper_fingerprints.rs  helper_semantics.rs  lib.rs  main.rs  reorder_analysis.rs  rewrites.rs  semantic_resolver.rs  wasm_ir.rs
src/app/: exports.rs  (+7 more)
tests/: CBIHT4HVRIT5OMVLSXZ44J2ZAXYBDDGOSCN3LTN2DOC6SWHDS5IP6BK3.rs  CBIHT4HVRIT5OMVLSXZ44J2ZAXYBDDGOSCN3LTN2DOC6SWHDS5IP6BK3.wasm  CDL74RF5BLYR2YBLCCI7F5FB6TPSCLKEJUBSD2RSVWZ4YHF3VMFAIGWA.rs  CDL74RF5BLYR2YBLCCI7F5FB6TPSCLKEJUBSD2RSVWZ4YHF3VMFAIGWA.wasm  another_random.rs  hello.optimized.rs  pattern_engine.rs  pattern_golden.rs  pattern_per_pattern.rs  random_contract.rs  random_contract.rs.decompiled  random_contract.wasm  random_contract1.rs  random_contract1.wasm  random_contract2.rs  random_contract2.wasm  second_another_random.rs  sep_45_account.rs  soroban-auditor-failed.rs  soroban-auditor-failed.wasm  soroban_atomic_swap_contract.original.rs  soroban_atomic_swap_contract.rs  soroban_auth_contract.rs  soroban_custom_account.rs  soroban_events_contract.original.rs  soroban_events_contract.rs  soroban_hello_world_contract.original.rs  (+5 more)
(+265 files in other folders)
