[package]
name = "soroban-auditor"
version = "0.2.0"
authors = ["StellarChain <support@stellarchain.io>"]
edition = "2021"

[dependencies]
lcs = "0.2.0"
levenshtein = "1.0.5"
parity-wasm = "0.45.0"
prettyplease = "0.2.0"
proc-macro2 = "1.0.69"
quote = "1.0.33"
regex = "1.10.4"
serde_json = "1.0.100"
soroban-env-common = "21.0.2"
soroban-sdk = "20.5.0"
soroban-spec = "20.5.0"
soroban-spec-rust = "20.5.0"
structopt = "0.2.5"
tlsh-fixed = "0.1.1"
toml = "0.8.12"
unicode-xid = "0.1.0"
unidecode = "0.3.0"
