[package]
name = "soroban-auditor"
version = "0.2.0"
authors = ["StellarChain <support@stellarchain.io>"]
edition = "2021"

[dependencies]
lcs = "0.2.0"
levenshtein = "1.0.5"
parity-wasm = "0.45.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
quote = "1.0.44"
regex = "1.12.3"
serde_json = "1.0.149"
soroban-env-common = "25.0.1"
soroban-sdk = "25.1.0"
soroban-spec = "25.1.0"
soroban-spec-rust = "25.1.0"
structopt = "0.3.26"
tlsh-fixed = "0.1.1"
toml = "0.9.11"
unicode-xid = "0.2.6"
unidecode = "0.3.0"
