[package]
name = "soroban-auditor"
version = "2.5.1"
authors = ["StellarChain <support@stellarchain.io>"]
edition = "2021"

[[bin]]
name = "soroban-auditor"
path = "src/main.rs"

[[bin]]
name = "sdk-analyze"
path = "src/bin/sdk-analyze.rs"

[lib]
name = "soroban_auditor"
path = "src/lib.rs"

[dependencies]
parity-wasm = { version = "0.45.0", features = ["bulk"] }
proc-macro2 = "1.0.106"
regex = "1.12.3"
serde_json = "1.0.149"
soroban-sdk = "25.1.0"
soroban-spec = "25.1.0"
soroban-spec-rust = "25.1.0"
structopt = "0.3.26"
unicode-xid = "0.2.6"
unidecode = "0.3.0"
